--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,16 @@
 
     <Button
         android:gravity="center"
-        android:layout_width="2000dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/btn_view"
         android:text="View"/>
+
+    <Button
+        android:gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_event_bus"
+        android:text="EventBus"/>
 
 </LinearLayout>
